--- a/public/css/output.css
+++ b/public/css/output.css
@@ -764,10 +764,6 @@ select {
   grid-column: span 3 / span 3;
 }
 
-.col-span-1 {
-  grid-column: span 1 / span 1;
-}
-
 .col-span-2 {
   grid-column: span 2 / span 2;
 }
@@ -1068,12 +1064,12 @@ select {
   margin-top: -3rem;
 }
 
-.mb-7 {
-  margin-bottom: 1.75rem;
-}
-
 .mt-7 {
   margin-top: 1.75rem;
+}
+
+.mb-7 {
+  margin-bottom: 1.75rem;
 }
 
 .mt-20 {
@@ -1094,6 +1090,10 @@ select {
 
 .mb-10 {
   margin-bottom: 2.5rem;
+}
+
+.mb-0 {
+  margin-bottom: 0px;
 }
 
 .block {
@@ -1372,6 +1372,10 @@ select {
   width: 83.333333%;
 }
 
+.w-36 {
+  width: 9rem;
+}
+
 .min-w-max {
   min-width: -webkit-max-content;
   min-width: -moz-max-content;
@@ -1380,6 +1384,10 @@ select {
 
 .min-w-0 {
   min-width: 0px;
+}
+
+.min-w-full {
+  min-width: 100%;
 }
 
 .max-w-7xl {
@@ -1583,10 +1591,6 @@ select {
 
 .grid-cols-3 {
   grid-template-columns: repeat(3, minmax(0, 1fr));
-}
-
-.grid-cols-5 {
-  grid-template-columns: repeat(5, minmax(0, 1fr));
 }
 
 .grid-cols-8 {
@@ -1808,8 +1812,30 @@ select {
   border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
 }
 
+.divide-x-2 > :not([hidden]) ~ :not([hidden]) {
+  --tw-divide-x-reverse: 0;
+  border-right-width: calc(2px * var(--tw-divide-x-reverse));
+  border-left-width: calc(2px * calc(1 - var(--tw-divide-x-reverse)));
+}
+
+.divide-x-8 > :not([hidden]) ~ :not([hidden]) {
+  --tw-divide-x-reverse: 0;
+  border-right-width: calc(8px * var(--tw-divide-x-reverse));
+  border-left-width: calc(8px * calc(1 - var(--tw-divide-x-reverse)));
+}
+
+.divide-x-4 > :not([hidden]) ~ :not([hidden]) {
+  --tw-divide-x-reverse: 0;
+  border-right-width: calc(4px * var(--tw-divide-x-reverse));
+  border-left-width: calc(4px * calc(1 - var(--tw-divide-x-reverse)));
+}
+
 .divide-solid > :not([hidden]) ~ :not([hidden]) {
   border-style: solid;
+}
+
+.divide-dashed > :not([hidden]) ~ :not([hidden]) {
+  border-style: dashed;
 }
 
 .divide-gray-400 > :not([hidden]) ~ :not([hidden]) {
@@ -2578,12 +2604,8 @@ select {
   padding-top: 2.5rem;
 }
 
-.pr-9 {
-  padding-right: 2.25rem;
-}
-
-.pr-80 {
-  padding-right: 20rem;
+.pl-6 {
+  padding-left: 1.5rem;
 }
 
 .text-left {
@@ -4495,6 +4517,10 @@ svg #main-circ {
     grid-column: span 2 / span 2;
   }
 
+  .sm\:col-auto {
+    grid-column: auto;
+  }
+
   .sm\:mx-3 {
     margin-left: 0.75rem;
     margin-right: 0.75rem;
@@ -4561,6 +4587,10 @@ svg #main-circ {
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
+  .sm\:grid-flow-row {
+    grid-auto-flow: row;
+  }
+
   .sm\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -4569,8 +4599,16 @@ svg #main-circ {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
+  .sm\:grid-cols-1 {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
+
   .sm\:flex-row {
     flex-direction: row;
+  }
+
+  .sm\:content-center {
+    align-content: center;
   }
 
   .sm\:items-center {
@@ -4591,6 +4629,16 @@ svg #main-circ {
 
   .sm\:gap-4 {
     gap: 1rem;
+  }
+
+  .sm\:divide-y-4 > :not([hidden]) ~ :not([hidden]) {
+    --tw-divide-y-reverse: 0;
+    border-top-width: calc(4px * calc(1 - var(--tw-divide-y-reverse)));
+    border-bottom-width: calc(4px * var(--tw-divide-y-reverse));
+  }
+
+  .sm\:divide-dashed > :not([hidden]) ~ :not([hidden]) {
+    border-style: dashed;
   }
 
   .sm\:overflow-hidden {
@@ -4680,6 +4728,21 @@ svg #main-circ {
     margin-right: 0px;
   }
 
+  .md\:mx-auto {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .md\:my-2 {
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+  }
+
+  .md\:my-6 {
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
+  }
+
   .md\:mt-0 {
     margin-top: 0px;
   }
@@ -4706,6 +4769,22 @@ svg #main-circ {
 
   .md\:mt-2 {
     margin-top: 0.5rem;
+  }
+
+  .md\:mb-5 {
+    margin-bottom: 1.25rem;
+  }
+
+  .md\:ml-6 {
+    margin-left: 1.5rem;
+  }
+
+  .md\:ml-2 {
+    margin-left: 0.5rem;
+  }
+
+  .md\:mr-6 {
+    margin-right: 1.5rem;
   }
 
   .md\:block {
@@ -4760,6 +4839,10 @@ svg #main-circ {
     width: 25%;
   }
 
+  .md\:w-96 {
+    width: 24rem;
+  }
+
   .md\:max-w-xl {
     max-width: 36rem;
   }
@@ -4770,6 +4853,10 @@ svg #main-circ {
 
   .md\:max-w-3xl {
     max-width: 48rem;
+  }
+
+  .md\:max-w-2xl {
+    max-width: 42rem;
   }
 
   .md\:grid-flow-col {
@@ -4788,12 +4875,20 @@ svg #main-circ {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
+  .md\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
   .md\:grid-rows-1 {
     grid-template-rows: repeat(1, minmax(0, 1fr));
   }
 
   .md\:flex-row {
     flex-direction: row;
+  }
+
+  .md\:flex-col {
+    flex-direction: column;
   }
 
   .md\:items-center {
@@ -4812,6 +4907,16 @@ svg #main-circ {
     gap: 1rem;
   }
 
+  .md\:divide-x-4 > :not([hidden]) ~ :not([hidden]) {
+    --tw-divide-x-reverse: 0;
+    border-right-width: calc(4px * var(--tw-divide-x-reverse));
+    border-left-width: calc(4px * calc(1 - var(--tw-divide-x-reverse)));
+  }
+
+  .md\:divide-dashed > :not([hidden]) ~ :not([hidden]) {
+    border-style: dashed;
+  }
+
   .md\:bg-transparent {
     background-color: transparent;
   }
@@ -4827,6 +4932,15 @@ svg #main-circ {
   .md\:px-6 {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
+  }
+
+  .md\:py-6 {
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+  }
+
+  .md\:pl-6 {
+    padding-left: 1.5rem;
   }
 
   .md\:text-left {
@@ -4874,6 +4988,10 @@ svg #main-circ {
 
   .lg\:mt-0 {
     margin-top: 0px;
+  }
+
+  .lg\:mb-0 {
+    margin-bottom: 0px;
   }
 
   .lg\:block {
