--- a/public/css/output.css
+++ b/public/css/output.css
@@ -1092,10 +1092,6 @@ select {
   margin-bottom: 2.5rem;
 }
 
-.mb-0 {
-  margin-bottom: 0px;
-}
-
 .block {
   display: block;
 }
@@ -1372,22 +1368,18 @@ select {
   width: 83.333333%;
 }
 
-.w-36 {
-  width: 9rem;
-}
-
 .min-w-max {
   min-width: -webkit-max-content;
   min-width: -moz-max-content;
   min-width: max-content;
 }
 
-.min-w-0 {
-  min-width: 0px;
-}
-
 .min-w-full {
   min-width: 100%;
+}
+
+.min-w-0 {
+  min-width: 0px;
 }
 
 .max-w-7xl {
@@ -1812,30 +1804,8 @@ select {
   border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
 }
 
-.divide-x-2 > :not([hidden]) ~ :not([hidden]) {
-  --tw-divide-x-reverse: 0;
-  border-right-width: calc(2px * var(--tw-divide-x-reverse));
-  border-left-width: calc(2px * calc(1 - var(--tw-divide-x-reverse)));
-}
-
-.divide-x-8 > :not([hidden]) ~ :not([hidden]) {
-  --tw-divide-x-reverse: 0;
-  border-right-width: calc(8px * var(--tw-divide-x-reverse));
-  border-left-width: calc(8px * calc(1 - var(--tw-divide-x-reverse)));
-}
-
-.divide-x-4 > :not([hidden]) ~ :not([hidden]) {
-  --tw-divide-x-reverse: 0;
-  border-right-width: calc(4px * var(--tw-divide-x-reverse));
-  border-left-width: calc(4px * calc(1 - var(--tw-divide-x-reverse)));
-}
-
 .divide-solid > :not([hidden]) ~ :not([hidden]) {
   border-style: solid;
-}
-
-.divide-dashed > :not([hidden]) ~ :not([hidden]) {
-  border-style: dashed;
 }
 
 .divide-gray-400 > :not([hidden]) ~ :not([hidden]) {
@@ -2602,10 +2572,6 @@ select {
 
 .pt-10 {
   padding-top: 2.5rem;
-}
-
-.pl-6 {
-  padding-left: 1.5rem;
 }
 
 .text-left {
@@ -4517,10 +4483,6 @@ svg #main-circ {
     grid-column: span 2 / span 2;
   }
 
-  .sm\:col-auto {
-    grid-column: auto;
-  }
-
   .sm\:mx-3 {
     margin-left: 0.75rem;
     margin-right: 0.75rem;
@@ -4599,16 +4561,8 @@ svg #main-circ {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
-  .sm\:grid-cols-1 {
-    grid-template-columns: repeat(1, minmax(0, 1fr));
-  }
-
   .sm\:flex-row {
     flex-direction: row;
-  }
-
-  .sm\:content-center {
-    align-content: center;
   }
 
   .sm\:items-center {
@@ -4629,16 +4583,6 @@ svg #main-circ {
 
   .sm\:gap-4 {
     gap: 1rem;
-  }
-
-  .sm\:divide-y-4 > :not([hidden]) ~ :not([hidden]) {
-    --tw-divide-y-reverse: 0;
-    border-top-width: calc(4px * calc(1 - var(--tw-divide-y-reverse)));
-    border-bottom-width: calc(4px * var(--tw-divide-y-reverse));
-  }
-
-  .sm\:divide-dashed > :not([hidden]) ~ :not([hidden]) {
-    border-style: dashed;
   }
 
   .sm\:overflow-hidden {
@@ -4705,6 +4649,10 @@ svg #main-circ {
     grid-column: span 1 / span 1;
   }
 
+  .md\:col-span-2 {
+    grid-column: span 2 / span 2;
+  }
+
   .md\:col-start-3 {
     grid-column-start: 3;
   }
@@ -4726,21 +4674,6 @@ svg #main-circ {
   .md\:mx-0 {
     margin-left: 0px;
     margin-right: 0px;
-  }
-
-  .md\:mx-auto {
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .md\:my-2 {
-    margin-top: 0.5rem;
-    margin-bottom: 0.5rem;
-  }
-
-  .md\:my-6 {
-    margin-top: 1.5rem;
-    margin-bottom: 1.5rem;
   }
 
   .md\:mt-0 {
@@ -4767,10 +4700,6 @@ svg #main-circ {
     margin-left: 1rem;
   }
 
-  .md\:mt-2 {
-    margin-top: 0.5rem;
-  }
-
   .md\:mb-5 {
     margin-bottom: 1.25rem;
   }
@@ -4779,12 +4708,12 @@ svg #main-circ {
     margin-left: 1.5rem;
   }
 
-  .md\:ml-2 {
-    margin-left: 0.5rem;
-  }
-
   .md\:mr-6 {
     margin-right: 1.5rem;
+  }
+
+  .md\:mt-2 {
+    margin-top: 0.5rem;
   }
 
   .md\:block {
@@ -4839,12 +4768,12 @@ svg #main-circ {
     width: 25%;
   }
 
-  .md\:w-96 {
-    width: 24rem;
-  }
-
   .md\:max-w-xl {
     max-width: 36rem;
+  }
+
+  .md\:max-w-2xl {
+    max-width: 42rem;
   }
 
   .md\:max-w-4xl {
@@ -4855,8 +4784,8 @@ svg #main-circ {
     max-width: 48rem;
   }
 
-  .md\:max-w-2xl {
-    max-width: 42rem;
+  .md\:grid-flow-row {
+    grid-auto-flow: row;
   }
 
   .md\:grid-flow-col {
@@ -4871,12 +4800,12 @@ svg #main-circ {
     grid-template-columns: repeat(7, minmax(0, 1fr));
   }
 
-  .md\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-
   .md\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .md\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .md\:grid-rows-1 {
@@ -4885,10 +4814,6 @@ svg #main-circ {
 
   .md\:flex-row {
     flex-direction: row;
-  }
-
-  .md\:flex-col {
-    flex-direction: column;
   }
 
   .md\:items-center {
@@ -4934,9 +4859,9 @@ svg #main-circ {
     padding-right: 1.5rem;
   }
 
-  .md\:py-6 {
-    padding-top: 1.5rem;
-    padding-bottom: 1.5rem;
+  .md\:px-0 {
+    padding-left: 0px;
+    padding-right: 0px;
   }
 
   .md\:pl-6 {
@@ -4988,10 +4913,6 @@ svg #main-circ {
 
   .lg\:mt-0 {
     margin-top: 0px;
-  }
-
-  .lg\:mb-0 {
-    margin-bottom: 0px;
   }
 
   .lg\:block {
